<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.elijunior.estegapp.EstegAppMainActivity" >

    <Button
        android:id="@+id/btEsteg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/bt1_tela1" />

    <Button
        android:id="@+id/btDesesteg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btEsteg"
        android:layout_centerHorizontal="true"
        android:text="@string/bt2_tela1" />

    <Button
        android:id="@+id/btSobre"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btDesesteg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/bt3_tela1" />

</RelativeLayout>